# resto

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  test.toml
.github/workflows/: release.yml
doc/: output_format.md  toad.vhs
src/: cli.rs  collection.rs  executor.rs  interpolate.rs  main.rs  output.rs
test-files/: create-post-body.json  test-bad.toml  test-body.toml  test.toml
