[package]
name = "toad-cli"
version = "0.3.0"
license = "MIT"
edition = "2024"
description = "A developer-friendly REST client called toad"
repository = "https://github.com/benabernathy/toad-cli"
readme = "README.md"

[[bin]]
name = "toad"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
indexmap = { version = "2.14.0", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.1.2", features = ["preserve_order"] }
